spacing fix

--- a/assets/style/scss/_components.scss
+++ b/assets/style/scss/_components.scss
@@ -4,15 +4,13 @@
   width: 100vw;
   padding: 1rem 2rem;
   backdrop-filter: saturate(180%) blur(20px);
-  background: #ffffff45;
-  color: #1d1d1d;
   z-index: 100;
   opacity: 0;
 }
 
 .header {
   position: relative;
-  height: 80vh;
+  height: 100vh;
   background: linear-gradient(0deg, #000000aa, #000000d2),
     url(../media/images/hero.jpg);
   background-position: center center;
@@ -47,22 +45,47 @@
   }
 }
 
+.section {
+  position: relative;
+  width: 80%;
+  padding: 1rem;
+  margin: 15rem auto;
 
-
-.ad{
-    &__block{
-        margin: 10rem 0;
-        &:nth-child(2) .ad__poster{
-            order: 3;
-            width: 0;
-        }
+  @media (min-width: 60rem) {
+    & {
+      width: 70%;
     }
-
-    &__poster{
-        flex: 0 1 50%;
-    }
+  }
+  &__container {
+    position: relative;
+  }
 }
 
+.container {
+  width: 90%;
+  margin: 0 auto;
+
+  @media (min-width: 50em) {
+    & {
+      width: 80;
+    }
+  }
+}
+
+.ad {
+  &__block {
+    margin: 10rem 0;
+    &:nth-child(2) .ad__poster {
+      @media (min-width: 40em) {
+        order: 3;
+      }
+    }
+  }
+
+  &__poster {
+    flex: 0 1 50%;
+  }
+}
 
 .team {
   &-profile {
@@ -84,16 +107,12 @@
   }
 }
 
-// .heading--section:nth-child(2){
-//     margin: 40rem 0;
-// }
-
-.media{
-    justify-content: center;
-    &__video{
-        width: 100vw;
-        transform: scale(.5);
-    }
+.media {
+  justify-content: center;
+  &__video {
+    width: 100vw;
+    transform: scale(0.5);
+  }
 }
 
 .footer {
@@ -101,12 +120,12 @@
   font-weight: 400;
   padding: 10rem 4rem;
 
-&__container{
-  padding: 5rem;
-  margin: 0 auto;
-  width: 80vw;
-  border-top: .2px dashed var(--Text--color);
-}
+  &__container {
+    padding: 5rem;
+    margin: 0 auto;
+    width: 80vw;
+    border-top: 0.2px dashed var(--Text--color);
+  }
 
   &-flex {
     flex-direction: row;
